Create fake testing services for TCP, UDP, unix domain sockets, output and HTTP checks

--- a/pylama.ini
+++ b/pylama.ini
@@ -3,3 +3,7 @@ linters = pep8,pep257,pyflakes,mccabe
 
 [pylama:pep8]
 max_line_length = 120
+
+# Ignore warnings about missing module-level docstrings in __init__.py files.
+[pylama:*/__init__.py]
+ignore = D100
