--- a/pylama.ini
+++ b/pylama.ini
@@ -4,6 +4,7 @@ linters = pep8,pep257,pyflakes,mccabe
 [pylama:pep8]
 max_line_length = 120
 
-# Ignore warnings about missing module-level docstrings in __init__.py files.
 [pylama:*/__init__.py]
-ignore = D100
+# W0611 - Ignore warnings about missing module-level docstrings in __init__.py files.
+# D100 - Ignore 'imported but not used' warnings in __init__.py files.
+ignore = W0611,D100
